--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod",
+    "start": "node server.js",
   },
   "private": true,
+  "engines": {
+    "node": "14.4.0",
+    "npm": "7.12.1"
+  },
   "dependencies": {
     "@angular/animations": "~10.0.6",
     "@angular/common": "~10.0.6",
@@ -22,6 +27,7 @@
     "@angular/router": "~10.0.6",
     "@jasonvh/carousel": "^1.0.2",
     "bootstrap": "4.6",
+    "express": "^4.16.2",
     "jquery": "^3.6.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
